[BlobStorage] Fix disk space query, stop evicting everything

It looks like we were querying disk space on a non-existant directory.
Instead create the directory first. Then, remove the if clause that
caused us to evict everything when we trigger eviction.

Bug: 829410
Change-Id: I0b20f9cbfeecb2896841a271c83355b132aa18fb
Reviewed-on: https://chromium-review.googlesource.com/998523
Reviewed-by: Marijn Kruisselbrink <mek@chromium.org>
Commit-Queue: Daniel Murphy <dmurph@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548927}
Former-commit-id: 780cf98130ff14c897703bcdbcc2ef03d787fbe9